# super_fair_division

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
benches/: performance.rs
examples/: basic_usage.rs
src/: algorithm.rs  lib.rs
tests/: integration_tests.rs
